snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-all.jar.sha512
3a84a9145611203e525d73b4f2d560608a8ace14842763aeb192f60a150284af41900b56ae540ec7c9582c313c824690b621eb0829c1b0866f114d12f7811c9d